parser.output
Terminals unused in grammar

    NEQ
    LE
    GE
    COMMA


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: declaration
    5          | assignment
    6          | if_statement
    7          | while_statement
    8          | print_statement
    9          | return_statement

   10 type: INT
   11     | FLOAT

   12 declaration: type IDENTIFIER SEMICOLON
   13            | type IDENTIFIER ASSIGN expression SEMICOLON

   14 assignment: IDENTIFIER ASSIGN expression SEMICOLON

   15 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE
   16             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

   17 while_statement: WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE

   18 print_statement: PRINT LPAREN expression RPAREN SEMICOLON

   19 return_statement: RETURN expression SEMICOLON

   20 expression: term
   21           | expression PLUS term
   22           | expression MINUS term
   23           | expression EQ term
   24           | expression LT term
   25           | expression GT term

   26 term: factor
   27     | term MULT factor
   28     | term DIV factor

   29 factor: INT_LITERAL
   30       | FLOAT_LITERAL
   31       | IDENTIFIER
   32       | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string> (258) 12 13 14 31
    INT_LITERAL <int_val> (259) 29
    FLOAT_LITERAL <float_val> (260) 30
    INT (261) 10
    FLOAT (262) 11
    IF (263) 15 16
    ELSE (264) 16
    WHILE (265) 17
    RETURN (266) 19
    PRINT (267) 18
    PLUS (268) 21
    MINUS (269) 22
    MULT (270) 27
    DIV (271) 28
    ASSIGN (272) 13 14
    EQ (273) 23
    NEQ (274)
    LT (275) 24
    GT (276) 25
    LE (277)
    GE (278)
    LPAREN (279) 15 16 17 18 32
    RPAREN (280) 15 16 17 18 32
    LBRACE (281) 15 16 17
    RBRACE (282) 15 16 17
    SEMICOLON (283) 12 13 14 18 19
    COMMA (284)


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    program <node_id> (31)
        on left: 1
        on right: 0
    statement_list <node_id> (32)
        on left: 2 3
        on right: 1 3 15 16 17
    statement <node_id> (33)
        on left: 4 5 6 7 8 9
        on right: 2 3
    type <node_id> (34)
        on left: 10 11
        on right: 12 13
    declaration <node_id> (35)
        on left: 12 13
        on right: 4
    assignment <node_id> (36)
        on left: 14
        on right: 5
    if_statement <node_id> (37)
        on left: 15 16
        on right: 6
    while_statement <node_id> (38)
        on left: 17
        on right: 7
    print_statement <node_id> (39)
        on left: 18
        on right: 8
    return_statement <node_id> (40)
        on left: 19
        on right: 9
    expression <node_id> (41)
        on left: 20 21 22 23 24 25
        on right: 13 14 15 16 17 18 19 21 22 23 24 25 32
    term <node_id> (42)
        on left: 26 27 28
        on right: 20 21 22 23 24 25 27 28
    factor <node_id> (43)
        on left: 29 30 31 32
        on right: 26 27 28


State 0

    0 $accept: • program $end

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7

    program           go to state 8
    statement_list    go to state 9
    statement         go to state 10
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 1

   14 assignment: IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 18


State 2

   10 type: INT •

    $default  reduce using rule 10 (type)


State 3

   11 type: FLOAT •

    $default  reduce using rule 11 (type)


State 4

   15 if_statement: IF • LPAREN expression RPAREN LBRACE statement_list RBRACE
   16             | IF • LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 19


State 5

   17 while_statement: WHILE • LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 20


State 6

   19 return_statement: RETURN • expression SEMICOLON

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 25
    term        go to state 26
    factor      go to state 27


State 7

   18 print_statement: PRINT • LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 28


State 8

    0 $accept: program • $end

    $end  shift, and go to state 29


State 9

    1 program: statement_list •
    3 statement_list: statement_list • statement

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7

    $default  reduce using rule 1 (program)

    statement         go to state 30
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 10

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 11

   12 declaration: type • IDENTIFIER SEMICOLON
   13            | type • IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 31


State 12

    4 statement: declaration •

    $default  reduce using rule 4 (statement)


State 13

    5 statement: assignment •

    $default  reduce using rule 5 (statement)


State 14

    6 statement: if_statement •

    $default  reduce using rule 6 (statement)


State 15

    7 statement: while_statement •

    $default  reduce using rule 7 (statement)


State 16

    8 statement: print_statement •

    $default  reduce using rule 8 (statement)


State 17

    9 statement: return_statement •

    $default  reduce using rule 9 (statement)


State 18

   14 assignment: IDENTIFIER ASSIGN • expression SEMICOLON

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 32
    term        go to state 26
    factor      go to state 27


State 19

   15 if_statement: IF LPAREN • expression RPAREN LBRACE statement_list RBRACE
   16             | IF LPAREN • expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 33
    term        go to state 26
    factor      go to state 27


State 20

   17 while_statement: WHILE LPAREN • expression RPAREN LBRACE statement_list RBRACE

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 34
    term        go to state 26
    factor      go to state 27


State 21

   31 factor: IDENTIFIER •

    $default  reduce using rule 31 (factor)


State 22

   29 factor: INT_LITERAL •

    $default  reduce using rule 29 (factor)


State 23

   30 factor: FLOAT_LITERAL •

    $default  reduce using rule 30 (factor)


State 24

   32 factor: LPAREN • expression RPAREN

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 35
    term        go to state 26
    factor      go to state 27


State 25

   19 return_statement: RETURN expression • SEMICOLON
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    EQ         shift, and go to state 38
    LT         shift, and go to state 39
    GT         shift, and go to state 40
    SEMICOLON  shift, and go to state 41


State 26

   20 expression: term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 20 (expression)


State 27

   26 term: factor •

    $default  reduce using rule 26 (term)


State 28

   18 print_statement: PRINT LPAREN • expression RPAREN SEMICOLON

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 44
    term        go to state 26
    factor      go to state 27


State 29

    0 $accept: program $end •

    $default  accept


State 30

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 31

   12 declaration: type IDENTIFIER • SEMICOLON
   13            | type IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN     shift, and go to state 45
    SEMICOLON  shift, and go to state 46


State 32

   14 assignment: IDENTIFIER ASSIGN expression • SEMICOLON
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    EQ         shift, and go to state 38
    LT         shift, and go to state 39
    GT         shift, and go to state 40
    SEMICOLON  shift, and go to state 47


State 33

   15 if_statement: IF LPAREN expression • RPAREN LBRACE statement_list RBRACE
   16             | IF LPAREN expression • RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    EQ      shift, and go to state 38
    LT      shift, and go to state 39
    GT      shift, and go to state 40
    RPAREN  shift, and go to state 48


State 34

   17 while_statement: WHILE LPAREN expression • RPAREN LBRACE statement_list RBRACE
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    EQ      shift, and go to state 38
    LT      shift, and go to state 39
    GT      shift, and go to state 40
    RPAREN  shift, and go to state 49


State 35

   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term
   32 factor: LPAREN expression • RPAREN

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    EQ      shift, and go to state 38
    LT      shift, and go to state 39
    GT      shift, and go to state 40
    RPAREN  shift, and go to state 50


State 36

   21 expression: expression PLUS • term

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    term    go to state 51
    factor  go to state 27


State 37

   22 expression: expression MINUS • term

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    term    go to state 52
    factor  go to state 27


State 38

   23 expression: expression EQ • term

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    term    go to state 53
    factor  go to state 27


State 39

   24 expression: expression LT • term

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    term    go to state 54
    factor  go to state 27


State 40

   25 expression: expression GT • term

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    term    go to state 55
    factor  go to state 27


State 41

   19 return_statement: RETURN expression SEMICOLON •

    $default  reduce using rule 19 (return_statement)


State 42

   27 term: term MULT • factor

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    factor  go to state 56


State 43

   28 term: term DIV • factor

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    factor  go to state 57


State 44

   18 print_statement: PRINT LPAREN expression • RPAREN SEMICOLON
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    EQ      shift, and go to state 38
    LT      shift, and go to state 39
    GT      shift, and go to state 40
    RPAREN  shift, and go to state 58


State 45

   13 declaration: type IDENTIFIER ASSIGN • expression SEMICOLON

    IDENTIFIER     shift, and go to state 21
    INT_LITERAL    shift, and go to state 22
    FLOAT_LITERAL  shift, and go to state 23
    LPAREN         shift, and go to state 24

    expression  go to state 59
    term        go to state 26
    factor      go to state 27


State 46

   12 declaration: type IDENTIFIER SEMICOLON •

    $default  reduce using rule 12 (declaration)


State 47

   14 assignment: IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 14 (assignment)


State 48

   15 if_statement: IF LPAREN expression RPAREN • LBRACE statement_list RBRACE
   16             | IF LPAREN expression RPAREN • LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 60


State 49

   17 while_statement: WHILE LPAREN expression RPAREN • LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 61


State 50

   32 factor: LPAREN expression RPAREN •

    $default  reduce using rule 32 (factor)


State 51

   21 expression: expression PLUS term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 21 (expression)


State 52

   22 expression: expression MINUS term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 22 (expression)


State 53

   23 expression: expression EQ term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 23 (expression)


State 54

   24 expression: expression LT term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 24 (expression)


State 55

   25 expression: expression GT term •
   27 term: term • MULT factor
   28     | term • DIV factor

    MULT  shift, and go to state 42
    DIV   shift, and go to state 43

    $default  reduce using rule 25 (expression)


State 56

   27 term: term MULT factor •

    $default  reduce using rule 27 (term)


State 57

   28 term: term DIV factor •

    $default  reduce using rule 28 (term)


State 58

   18 print_statement: PRINT LPAREN expression RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 62


State 59

   13 declaration: type IDENTIFIER ASSIGN expression • SEMICOLON
   21 expression: expression • PLUS term
   22           | expression • MINUS term
   23           | expression • EQ term
   24           | expression • LT term
   25           | expression • GT term

    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    EQ         shift, and go to state 38
    LT         shift, and go to state 39
    GT         shift, and go to state 40
    SEMICOLON  shift, and go to state 63


State 60

   15 if_statement: IF LPAREN expression RPAREN LBRACE • statement_list RBRACE
   16             | IF LPAREN expression RPAREN LBRACE • statement_list RBRACE ELSE LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7

    statement_list    go to state 64
    statement         go to state 10
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 61

   17 while_statement: WHILE LPAREN expression RPAREN LBRACE • statement_list RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7

    statement_list    go to state 65
    statement         go to state 10
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 62

   18 print_statement: PRINT LPAREN expression RPAREN SEMICOLON •

    $default  reduce using rule 18 (print_statement)


State 63

   13 declaration: type IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 13 (declaration)


State 64

    3 statement_list: statement_list • statement
   15 if_statement: IF LPAREN expression RPAREN LBRACE statement_list • RBRACE
   16             | IF LPAREN expression RPAREN LBRACE statement_list • RBRACE ELSE LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7
    RBRACE      shift, and go to state 66

    statement         go to state 30
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 65

    3 statement_list: statement_list • statement
   17 while_statement: WHILE LPAREN expression RPAREN LBRACE statement_list • RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7
    RBRACE      shift, and go to state 67

    statement         go to state 30
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 66

   15 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE •
   16             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE • ELSE LBRACE statement_list RBRACE

    ELSE  shift, and go to state 68

    $default  reduce using rule 15 (if_statement)


State 67

   17 while_statement: WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE •

    $default  reduce using rule 17 (while_statement)


State 68

   16 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE • LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 69


State 69

   16 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE • statement_list RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7

    statement_list    go to state 70
    statement         go to state 10
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 70

    3 statement_list: statement_list • statement
   16 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list • RBRACE

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RETURN      shift, and go to state 6
    PRINT       shift, and go to state 7
    RBRACE      shift, and go to state 71

    statement         go to state 30
    type              go to state 11
    declaration       go to state 12
    assignment        go to state 13
    if_statement      go to state 14
    while_statement   go to state 15
    print_statement   go to state 16
    return_statement  go to state 17


State 71

   16 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE •

    $default  reduce using rule 16 (if_statement)
